// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders exchange 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 20,
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../packages/mobile/src/images/exchange.png",
      }
    }
    style={
      Object {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    noExchangeActivity
     
  </Text>
</View>
`;

exports[`renders home 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 20,
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../packages/mobile/src/images/shiny-dollar.png",
      }
    }
    style={
      Object {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    noTransactionActivity
     
  </Text>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 7,
        "left": 7,
        "right": 7,
        "top": 7,
      }
    }
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingHorizontal": 16,
          "paddingVertical": 6,
        },
        Object {
          "backgroundColor": "#42D689",
          "paddingHorizontal": 18,
          "paddingVertical": 8,
        },
        Object {
          "alignSelf": "center",
          "marginTop": 20,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 13,
            "lineHeight": 20,
            "textAlign": "center",
          },
          Object {
            "color": "#FFFFFF",
          },
          null,
          undefined,
        ]
      }
    >
      global:sendCeloDollars
    </Text>
  </View>
</View>
`;

exports[`renders loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 20,
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#42D689"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    loadingActivity
  </Text>
</View>
`;
